grammar.js
    toplevel: $ => seq($._toplevel, repeat($._toplevel)),
    _toplevel: $ => choice($.operation, $.attribute_alias_def, $.type_alias_def),

    // Common syntax (lang-ref)
    //  digit     ::= [0-9]
    //  hex_digit ::= [0-9a-fA-F]
    //  letter    ::= [a-zA-Z]
    //  id-punct  ::= [$._-]
    //
    //  integer-literal ::= decimal-literal | hexadecimal-literal
    //  decimal-literal ::= digit+
    //  hexadecimal-literal ::= `0x` hex_digit+
    //  float-literal ::= [-+]?[0-9]+[.][0-9]*([eE][-+]?[0-9]+)?
    //  string-literal  ::= `"` [^"\n\f\v\r]* `"`   TODO: define escaping rules
    //
    integer_literal: $ => choice($._decimal_literal, $._hexadecimal_literal),
    _decimal_literal: $ => token(seq(optional(/[-+]/), repeat1(/[0-9]/))),
    _hexadecimal_literal: $ => token(seq('0x', repeat1(/[0-9a-fA-F]/))),
    string_literal: $ => token(seq('"', repeat(/[^\\"\n\f\v\r]+/), '"')),
    value_use: $ => seq('%', $._suffix_id),
    _suffix_id: $ => token(choice(repeat1(/[0-9]/), seq(/[a-zA-Z_$.]/, repeat(/[a-zA-Z0-9_$.]/)))),
    symbol_ref_id: $ => seq('@', choice($._suffix_id, $.string_literal),
      optional(seq('::', $.symbol_ref_id))),
    operation: $ => seq(
      field('lhs', optional($.op_result_list)),
      field('rhs', choice($.generic_operation, $.custom_operation)),
      field('location', optional($.trailing_location))),
    generic_operation: $ =>
      seq($.string_literal, '(', optional($.value_use_list),
        ')', optional($.successor_list),
        optional($.region_list),
        optional($.attribute), ':',
        $.function_type),
    // custom-operation rule is defined later in the grammar, post the generic.
    op_result: $ => seq($.value_use, optional(seq(':', $.integer_literal))),
    successor: $ => seq($.caret_id, optional($._value_arg_list)),
    block: $ => seq($.block_label, repeat1($.operation)),
    block_label: $ => seq($._block_id, optional($.block_arg_list), ':'),
    _block_id: $ => $.caret_id,
    caret_id: $ => seq('^', $._suffix_id),
    _value_use_and_type: $ => seq($.value_use, optional(seq(':', $.type))),
    _value_use_and_type_list: $ => seq($._value_use_and_type,
      repeat(seq(',', $._value_use_and_type))),
    block_arg_list: $ => seq('(', optional($._value_use_and_type_list), ')'),
    _value_arg_list: $ => seq('(', optional($._value_use_type_list), ')'),
    _value_use_type_list: $ => seq($.value_use_list, ':', $._type_list_no_parens),

    // Regions
    //   region      ::= `{` entry-block? block* `}`
    //   entry-block ::= operation+
    region: $ => seq('{', optional($.entry_block), repeat($.block), '}'),
    entry_block: $ => repeat1($.operation),

    // Types
    //   type ::= type-alias | dialect-type | builtin-type
    //
    //   type-list-no-parens ::=  type (`,` type)*
    //   type-list-parens ::= `(` type-list-no-parens? `)`
    //
    //   // This is a common way to refer to a value with a specified type.
    //   ssa-use-and-type ::= ssa-use `:` type
    //   ssa-use ::= value-use
    //
    //   // Non-empty list of names and types.
    //   ssa-use-and-type-list ::= ssa-use-and-type (`,` ssa-use-and-type)*
    //
    //   function-type ::= (type | type-list-parens) `->` (type |
    //   type-list-parens)
    type: $ => choice($.type_alias, $.dialect_type, $.builtin_type),
    _type_list_no_parens: $ => seq($.type, repeat(seq(',', $.type))),
    function_type: $ => seq(choice($.type, $.type_list_parens), $._function_return),
    _function_return: $ => seq('->', choice($.type, $.type_list_parens)),

    // Type aliases
    //   type-alias-def ::= '!' alias-name '=' type
    //   type-alias ::= '!' alias-name
    builtin_type: $ => choice(
      // TODO: Add opaque_type, function_type
      $.integer_type,
      $.float_type,
      $.complex_type,
      $.index_type,
      $.memref_type,
      $.none_type,
      $.tensor_type,
      $.vector_type,
      $.tuple_type),

    // signed-integer-type ::= `si`[1-9][0-9]*
    // unsigned-integer-type ::= `ui`[1-9][0-9]*
    // signless-integer-type ::= `i`[1-9][0-9]*
    // integer-type ::= signed-integer-type | unsigned-integer-type | signless-integer-type
    integer_type: $ => token(seq(choice('si', 'ui', 'i'), /[1-9]/, repeat(/[0-9]/))),
    float_type: $ => token(choice('f16', 'f32', 'f64', 'f80', 'f128', 'bf16',
      'f8E4M3FN', 'f8E5M2')),
    index_type: $ => token('index'),
    comment: $ => token(seq('//', /.*/)),

    // TODO: complete
    custom_operation: $ => choice(
      $.builtin_dialect,
      $.func_dialect,
      $.llvm_dialect,
      $.cf_dialect,
      $.arith_dialect,
      $.scf_dialect,
      $.memref_dialect,
      $.tensor_dialect,
      $.linalg_dialect
    ),

    func_dialect: $ => prec.right(choice(
      seq('func.func', $._op_func),

      seq(choice('func.return', 'return'),
        field('attributes', optional($.attribute)),
        field('results', optional($._value_use_type_list)))
    )),

    func_return: $ => seq('->', $.type_list_attr_parens),
    func_arg_list: $ => seq('(', optional(choice($.variadic,
      $._value_id_and_type_attr_list)), ')'),
    _value_id_and_type_attr_list: $ => seq($._value_id_and_type_attr,
      repeat(seq(',', $._value_id_and_type_attr)), optional(seq(',', $.variadic))),
    type_list_attr_parens: $ => choice($.type, seq('(', $.type, optional($.attribute),
      repeat(seq(',', $.type, optional($.attribute))), ')')),
    _op_func: $ => seq(
      field('name', $.symbol_ref_id),
      field('arguments', $.func_arg_list),
      field('return', optional($.func_return)),
      field('attributes', optional(seq(token('attributes'), $.attribute))),
      field('body', optional($.region))),

    cf_dialect: $ => prec.left(choice(
      // operation ::= `cf.br` $dest (`(` $destOperands^ `:` type($destOperands) `)`)? attr-dict
      seq('cf.br',
        field('successor', $.successor),
        field('attributes', optional($.attribute))),

      // operation ::= `cf.cond_br` $condition `,`
      // $trueDest(`(` $trueDestOperands ^ `:` type($trueDestOperands)`)`)? `,`
      // $falseDest(`(` $falseDestOperands ^ `:` type($falseDestOperands)`)`)? attr-dict
      seq('cf.cond_br',
        field('condition', $.value_use), ',',
        field('trueDest', $.successor), ',',
        field('falseDest', $.successor),
        field('attributes', optional($.attribute))),

      // operation ::= `cf.switch` $flag `:` type($flag) `,` `[` `\n`
      //               custom<SwitchOpCases>(ref(type($flag)),$defaultDestination,
      //               $defaultOperands,
      //               type($defaultOperands),
      //               $case_values,
      //               $caseDestinations,
      //               $caseOperands,
      //               type($caseOperands))
      //               `]`
      //               attr-dict
      seq('cf.switch',
        field('flag', $._value_use_and_type), ',', '[',
        $.case_label, $.successor, repeat(seq(',', $.case_label, $.successor)), ']',
        field('attributes', optional($.attribute))),
    )),

    arith_dialect: $ => choice(
      // operation ::= `arith.constant` attr-dict $value
      seq('arith.constant',
        field('attributes', optional($.attribute)),
        field('value', $._literal_and_type)),

      // operation ::= `arith.addi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.subi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.divsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.divui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.ceildivsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.ceildivui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.floordivsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.remsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.remui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.muli` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.mulsi_extended` $lhs `,` $rhs attr-dict `:` type($lhs)
      // operation ::= `arith.andi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.ori` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.xori` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.maxsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.maxui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.minsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.minui` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.shli` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.shrsi` $lhs `,` $rhs attr-dict `:` type($result)
      // operation ::= `arith.shrui` $lhs `,` $rhs attr-dict `:` type($result)
      seq(choice('arith.addi', 'arith.subi', 'arith.divsi', 'arith.divui',
        'arith.ceildivsi', 'arith.ceildivui', 'arith.floordivsi',
        'arith.remsi', 'arith.remui', 'arith.muli', 'arith.mulsi_extended',
        'arith.andi', 'arith.ori', 'arith.xori',
        'arith.maxsi', 'arith.maxui', 'arith.minsi', 'arith.minui',
        'arith.shli', 'arith.shrsi', 'arith.shrui'),
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('attributes', optional($.attribute)), ':',
        $.type),

      // operation ::= `arith.addui_extended` $lhs `,` $rhs attr-dict `:` type($sum)
      //                `,` type($overflow)
      seq('arith.addui_extended',
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('attributes', optional($.attribute)),
        ':', $.type, ',', $.type),

      // operation ::= `arith.addf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.divf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.maxf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.minf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.mulf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.remf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      // operation ::= `arith.subf` $lhs `,` $rhs (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      seq(choice('arith.addf', 'arith.divf', 'arith.maxf', 'arith.minf', 'arith.mulf',
        'arith.remf', 'arith.subf'),
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('fastmath', optional($.fastmath_attr)),
        field('attributes', optional($.attribute)), ':',
        $.type),

      // operation ::= `arith.negf` $operand (`fastmath` `` $fastmath^)?
      //                attr-dict `:` type($result)
      seq(choice('arith.negf'),
        field('operand', $.value_use),
        field('fastmath', optional($.fastmath_attr)),
        field('attributes', optional($.attribute)), ':',
        $.type),

      // operation ::= `arith.cmpi` $predicate `,` $lhs `,` $rhs attr-dict `:` type($lhs)
      // operation ::= `arith.cmpf` $predicate `,` $lhs `,` $rhs attr-dict `:` type($lhs)
      seq(choice('arith.cmpi', 'arith.cmpf'),
        field('predicate',
          choice('eq', 'oeq', 'ne', 'slt', 'sle', 'sgt', 'sge', 'ult', 'ule', 'ugt', 'uge')), ',',
        field('lhs', $.value_use), ',',
        field('rhs', $.value_use),
        field('attributes', optional($.attribute)), ':', $.type),

      // operation ::= `arith.extf` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.extsi` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.extui` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.fptosi` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.fptoui` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.index_cast` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.index_castui` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.sitofp` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.uitofp` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.bitcast` $in attr-dict `:` type($in) `to` type($out)
      // operation ::= `arith.truncf` $in attr-dict `:` type($in) `to` type($out)
      seq(choice('arith.extf', 'arith.extsi', 'arith.extui', 'arith.fptosi', 'arith.fptoui',
        'arith.index_cast', 'arith.index_castui', 'arith.sitofp', 'arith.uitofp', 'arith.bitcast',
        'arith.truncf'),
        field('in', $.value_use),
        field('attributes', $.attribute),
        $._from_type_to_type),

      seq('arith.select',
        field('cond', $.value_use), ',',
        field('truebr', $.value_use), ',',
        field('falsebr', $.value_use),
        ':', $._type_list_no_parens)
    ),

    _literal_and_type: $ => seq($.literal, optional(seq(':', $.type))),
    _from_type_to_type: $ => seq(':',
      field('fromtype', $.type), token('to'),
      field('totype', $.type)),
    scf_dialect: $ => prec.right(choice(
      seq('scf.if',
        field('condition', $.value_use),
        optional($._function_return),
        field('trueblk', $.region), token('else'),
        field('falseblk', $.region)),

      // scf.for %iv = %lb to %ub step %step {
      // ... // body
      // }
      seq('scf.for',
        field('iv', $.value_use), '=',
        field('lb', $.value_use), token('to'),
        field('ub', $.value_use), token('step'),
        field('step', $.value_use),
        field('iter_args', optional(seq(token('iter_args'), '(',
          $.value_use, '=', $.value_use, ')'))),
        field('return', optional($._function_return)),
        field('body', $.region)),

      // operation ::= `scf.yield` attr-dict ($results^ `:` type($results))?
      seq('scf.yield',
        field('attributes', optional($.attribute)),
        field('results', optional($._value_use_type_list))),
    )),
